--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/MFRasfan/LIRI-Bot/issues"
   },
-  "homepage": "https://github.com/MFRasfan/LIRI-Bot#readme"
+  "homepage": "https://github.com/MFRasfan/LIRI-Bot#readme",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.1.0",
+    "fs": "0.0.1-security",
+    "json": "^9.0.6",
+    "moment": "^2.24.0",
+    "node-spotify-api": "^1.1.1",
+    "response": "^0.18.0"
+  }
 }
